fixed issue of invisible of controller.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -60,7 +60,7 @@ body{
     height : $KEY_SIZE;
     font-size: 18px;
     text-align: center;
-    padding-top: 5px;
+    padding-top: 7px;
     color: #ffffff;
     border: #ffffff 1px solid;
     background: rgba(200, 200, 200, 0.6);
